fix: padding bottom added to see the bottom page on ios chrome

--- a/src/app/restaurant/orders/full-order/full-order.page.scss
+++ b/src/app/restaurant/orders/full-order/full-order.page.scss
@@ -1,5 +1,6 @@
 .app {
     height: 100%;
+    padding-bottom: 248px;
 
     .header {
         display: flex;
