--- a/src/app/restaurant/orders/list/list.page.scss
+++ b/src/app/restaurant/orders/list/list.page.scss
@@ -1,6 +1,6 @@
 .app {
-    padding-bottom: 124px;
-
+    padding-bottom: 248px;
+    
     .header {
         margin-top: 12px;
         display: flex;
