--- a/src/app/restaurant/settings/settings.page.scss
+++ b/src/app/restaurant/settings/settings.page.scss
@@ -1,5 +1,5 @@
 .app {
-    margin-bottom: 200px;
+    padding-bottom: 248px;
 
     .restaurant {
         margin-top: 12px;
